--- a/ProjectProposal_Group142-FA24.ipynb
+++ b/ProjectProposal_Group142-FA24.ipynb
@@ -191,13 +191,15 @@
     "| 10/14 | 9AM - 10AM | - Finish Project Proposal | - Reframe Question to be more specific <br> - Gather data for clearning <br> |\n",
     "| 10/16 | 9AM - 10AM | - Finish Project Proposal <br> - upload data to kaggle <br> - Gather data for clearning | - Explained the data gathered <br> - updates on background research <br> - Oceanic areas had missing data (NASA) |\n",
     "| 10/21 | 6PM - 7PM | - Finish Project Proposal <br> - Data exploration | - Project Review <br> - explained gathered data <br> |\n",
-    "| 10/24 | 2:30PM - 3:30PM | - Clean Data | - Review Project Proposal  <br> - Create a task list for the analysis |"
+    "| 10/24 | 2:30PM - 3:30PM | - Clean Data | - Review Project Proposal  <br> - Create a task list for the analysis |\n",
+    "| 10/30 | 8AM - 9:30AM | - EDA weather data | - Discussed process moving forward <br> - Time series analysis (ultimate goal) |\n",
+    "| 11/6 | 6:30PM - 8:30PM | - Get new weather data <br> - Finish Data Checkpoint <br> - Update corrilation Map <br> - Vet cocoa data | - EDA analysis as a team (at Geisel) |"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "c526c828-15c5-47d8-baa7-706e5e24a454",
+   "id": "7c4b36af-3e65-41be-80e4-2b4af6e105d5",
    "metadata": {},
    "outputs": [],
    "source": []
