Updated project timeline

--- a/ProjectProposal_Group142-FA24.ipynb
+++ b/ProjectProposal_Group142-FA24.ipynb
@@ -193,13 +193,14 @@
     "| 10/21 | 6PM - 7PM | - Finish Project Proposal <br> - Data exploration | - Project Review <br> - explained gathered data <br> |\n",
     "| 10/24 | 2:30PM - 3:30PM | - Clean Data | - Review Project Proposal  <br> - Create a task list for the analysis |\n",
     "| 10/30 | 8AM - 9:30AM | - EDA weather data | - Discussed process moving forward <br> - Time series analysis (ultimate goal) |\n",
-    "| 11/6 | 6:30PM - 8:30PM | - Get new weather data <br> - Finish Data Checkpoint <br> - Update corrilation Map <br> - Vet cocoa data | - EDA analysis as a team (at Geisel) |"
+    "| 11/6 | 6:30PM - 8:30PM | - Get new weather data <br> - Finish Data Checkpoint <br> - Update corrilation Map <br> - Vet cocoa data | - EDA analysis as a team <br> - Cleaned data for NASA and Cocoa closing prices <br> - created scripts to clear outputs for notebooks|\n",
+    "| 11/8 | 4PM - 5:30PM | - Fix time breakdown for CC1 <br>  | - EDA analysis as a team per stations (3D gradiend maps)  |"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "7c4b36af-3e65-41be-80e4-2b4af6e105d5",
+   "id": "15a37f69-da4e-42f3-bea8-db41bf27013c",
    "metadata": {},
    "outputs": [],
    "source": []
