added inline comments

--- a/NASA_Data.ipynb
+++ b/NASA_Data.ipynb
@@ -355,7 +355,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 18,
    "id": "fbfeb0a8-9341-495c-92a2-b302af1db60a",
    "metadata": {},
    "outputs": [
@@ -491,13 +491,14 @@
        "4            27.72         83.81               0.62              1.35  "
       ]
      },
-     "execution_count": 6,
+     "execution_count": 18,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "# Drop rows where any cell has a value of -999\n",
+    "# -999 indicates NULL for that cell, as per NASA Power DAV Tool\n",
     "df = df[(df != -999).all(axis=1)]\n",
     "\n",
     "print(df.shape)\n",
