--- a/NASA_DB/NASA_Data_Slicer.ipynb
+++ b/NASA_DB/NASA_Data_Slicer.ipynb
@@ -5,7 +5,7 @@
    "id": "505511b3-6392-46ec-a60a-a5b9e6600c08",
    "metadata": {},
    "source": [
-    "# NASA Data Slicer\n",
+    "# NASA Agroclimatological Data Slicer\n",
     "\n",
     "This file slices the Clean_NASA_Agroclimatological.csv df by the different geographical stations. "
    ]
