--- a/DataCheckpoint_Group142-FA24.ipynb
+++ b/DataCheckpoint_Group142-FA24.ipynb
@@ -149,19 +149,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [],
    "source": [
     "import pandas as pd\n",
     "import numpy as np\n",
     "import matplotlib.pyplot as plt\n",
-    "import seaborn as sns"
+    "import seaborn as sns\n",
+    "import os"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -295,7 +296,7 @@
        "4      0.62         1.35  "
       ]
      },
-     "execution_count": 25,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -307,7 +308,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -442,7 +443,7 @@
        "4            27.72         83.81               0.62              1.35  "
       ]
      },
-     "execution_count": 26,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -472,7 +473,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -607,7 +608,7 @@
        "4            27.72         83.81               0.62              1.35  "
       ]
      },
-     "execution_count": 27,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -619,6 +620,381 @@
     "\n",
     "print(df.shape)\n",
     "df.head()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Create a new df where we assign stations to each LAT, LON"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Station_ID</th>\n",
+       "      <th>DATE</th>\n",
+       "      <th>LAT</th>\n",
+       "      <th>LON</th>\n",
+       "      <th>Soil_Moisture</th>\n",
+       "      <th>Temp_Avg</th>\n",
+       "      <th>Temp_Max</th>\n",
+       "      <th>Temp_Min</th>\n",
+       "      <th>Earth_Skin_Temp</th>\n",
+       "      <th>Rel_Humidity</th>\n",
+       "      <th>Root_Soil_Wetness</th>\n",
+       "      <th>Precip_Corrected</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>0</td>\n",
+       "      <td>2023-03-01</td>\n",
+       "      <td>4.75</td>\n",
+       "      <td>-8.25</td>\n",
+       "      <td>0.73</td>\n",
+       "      <td>26.97</td>\n",
+       "      <td>28.95</td>\n",
+       "      <td>25.33</td>\n",
+       "      <td>27.32</td>\n",
+       "      <td>83.49</td>\n",
+       "      <td>0.74</td>\n",
+       "      <td>0.98</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>1</td>\n",
+       "      <td>2023-03-01</td>\n",
+       "      <td>4.75</td>\n",
+       "      <td>-7.75</td>\n",
+       "      <td>0.69</td>\n",
+       "      <td>26.72</td>\n",
+       "      <td>29.31</td>\n",
+       "      <td>24.56</td>\n",
+       "      <td>26.82</td>\n",
+       "      <td>84.77</td>\n",
+       "      <td>0.68</td>\n",
+       "      <td>0.87</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>2</td>\n",
+       "      <td>2023-03-01</td>\n",
+       "      <td>4.75</td>\n",
+       "      <td>-7.25</td>\n",
+       "      <td>0.68</td>\n",
+       "      <td>26.67</td>\n",
+       "      <td>29.38</td>\n",
+       "      <td>24.41</td>\n",
+       "      <td>26.69</td>\n",
+       "      <td>85.31</td>\n",
+       "      <td>0.66</td>\n",
+       "      <td>0.94</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>3</td>\n",
+       "      <td>2023-03-01</td>\n",
+       "      <td>4.75</td>\n",
+       "      <td>-6.75</td>\n",
+       "      <td>0.70</td>\n",
+       "      <td>26.88</td>\n",
+       "      <td>29.09</td>\n",
+       "      <td>24.94</td>\n",
+       "      <td>26.96</td>\n",
+       "      <td>84.96</td>\n",
+       "      <td>0.67</td>\n",
+       "      <td>1.29</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>4</td>\n",
+       "      <td>2023-03-01</td>\n",
+       "      <td>4.75</td>\n",
+       "      <td>-6.25</td>\n",
+       "      <td>0.64</td>\n",
+       "      <td>27.43</td>\n",
+       "      <td>28.94</td>\n",
+       "      <td>26.01</td>\n",
+       "      <td>27.72</td>\n",
+       "      <td>83.81</td>\n",
+       "      <td>0.62</td>\n",
+       "      <td>1.35</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>...</th>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>46843</th>\n",
+       "      <td>85</td>\n",
+       "      <td>2024-06-30</td>\n",
+       "      <td>8.25</td>\n",
+       "      <td>-4.75</td>\n",
+       "      <td>0.55</td>\n",
+       "      <td>25.62</td>\n",
+       "      <td>28.88</td>\n",
+       "      <td>22.98</td>\n",
+       "      <td>25.78</td>\n",
+       "      <td>85.20</td>\n",
+       "      <td>0.55</td>\n",
+       "      <td>6.88</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>46844</th>\n",
+       "      <td>86</td>\n",
+       "      <td>2024-06-30</td>\n",
+       "      <td>8.25</td>\n",
+       "      <td>-4.25</td>\n",
+       "      <td>0.57</td>\n",
+       "      <td>25.48</td>\n",
+       "      <td>28.22</td>\n",
+       "      <td>23.14</td>\n",
+       "      <td>25.57</td>\n",
+       "      <td>86.75</td>\n",
+       "      <td>0.57</td>\n",
+       "      <td>7.58</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>46845</th>\n",
+       "      <td>87</td>\n",
+       "      <td>2024-06-30</td>\n",
+       "      <td>8.25</td>\n",
+       "      <td>-3.75</td>\n",
+       "      <td>0.58</td>\n",
+       "      <td>25.47</td>\n",
+       "      <td>28.37</td>\n",
+       "      <td>23.33</td>\n",
+       "      <td>25.63</td>\n",
+       "      <td>86.88</td>\n",
+       "      <td>0.59</td>\n",
+       "      <td>8.29</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>46846</th>\n",
+       "      <td>88</td>\n",
+       "      <td>2024-06-30</td>\n",
+       "      <td>8.25</td>\n",
+       "      <td>-3.25</td>\n",
+       "      <td>0.56</td>\n",
+       "      <td>25.19</td>\n",
+       "      <td>28.30</td>\n",
+       "      <td>23.21</td>\n",
+       "      <td>25.40</td>\n",
+       "      <td>86.55</td>\n",
+       "      <td>0.57</td>\n",
+       "      <td>7.18</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>46847</th>\n",
+       "      <td>89</td>\n",
+       "      <td>2024-06-30</td>\n",
+       "      <td>8.25</td>\n",
+       "      <td>-2.75</td>\n",
+       "      <td>0.55</td>\n",
+       "      <td>25.42</td>\n",
+       "      <td>28.62</td>\n",
+       "      <td>23.55</td>\n",
+       "      <td>25.66</td>\n",
+       "      <td>85.87</td>\n",
+       "      <td>0.57</td>\n",
+       "      <td>7.75</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>43920 rows × 12 columns</p>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "       Station_ID       DATE   LAT   LON  Soil_Moisture  Temp_Avg  Temp_Max  \\\n",
+       "0               0 2023-03-01  4.75 -8.25           0.73     26.97     28.95   \n",
+       "1               1 2023-03-01  4.75 -7.75           0.69     26.72     29.31   \n",
+       "2               2 2023-03-01  4.75 -7.25           0.68     26.67     29.38   \n",
+       "3               3 2023-03-01  4.75 -6.75           0.70     26.88     29.09   \n",
+       "4               4 2023-03-01  4.75 -6.25           0.64     27.43     28.94   \n",
+       "...           ...        ...   ...   ...            ...       ...       ...   \n",
+       "46843          85 2024-06-30  8.25 -4.75           0.55     25.62     28.88   \n",
+       "46844          86 2024-06-30  8.25 -4.25           0.57     25.48     28.22   \n",
+       "46845          87 2024-06-30  8.25 -3.75           0.58     25.47     28.37   \n",
+       "46846          88 2024-06-30  8.25 -3.25           0.56     25.19     28.30   \n",
+       "46847          89 2024-06-30  8.25 -2.75           0.55     25.42     28.62   \n",
+       "\n",
+       "       Temp_Min  Earth_Skin_Temp  Rel_Humidity  Root_Soil_Wetness  \\\n",
+       "0         25.33            27.32         83.49               0.74   \n",
+       "1         24.56            26.82         84.77               0.68   \n",
+       "2         24.41            26.69         85.31               0.66   \n",
+       "3         24.94            26.96         84.96               0.67   \n",
+       "4         26.01            27.72         83.81               0.62   \n",
+       "...         ...              ...           ...                ...   \n",
+       "46843     22.98            25.78         85.20               0.55   \n",
+       "46844     23.14            25.57         86.75               0.57   \n",
+       "46845     23.33            25.63         86.88               0.59   \n",
+       "46846     23.21            25.40         86.55               0.57   \n",
+       "46847     23.55            25.66         85.87               0.57   \n",
+       "\n",
+       "       Precip_Corrected  \n",
+       "0                  0.98  \n",
+       "1                  0.87  \n",
+       "2                  0.94  \n",
+       "3                  1.29  \n",
+       "4                  1.35  \n",
+       "...                 ...  \n",
+       "46843              6.88  \n",
+       "46844              7.58  \n",
+       "46845              8.29  \n",
+       "46846              7.18  \n",
+       "46847              7.75  \n",
+       "\n",
+       "[43920 rows x 12 columns]"
+      ]
+     },
+     "execution_count": 13,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df['Station_ID'] = df.groupby(['LAT', 'LON']).ngroup()\n",
+    "column_order = ['Station_ID'] + [col for col in df.columns if col != 'Station_ID']\n",
+    "df = df[column_order]\n",
+    "\n",
+    "station_df"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Slicing & Exporting df by Station ID"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Total CSV files created: 90\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Initialize a counter for the number of CSV files created\n",
+    "csv_count = 0\n",
+    "\n",
+    "# Assuming `df` is your DataFrame with a column named 'Station_ID'\n",
+    "for station_id, group in df.groupby('Station_ID'):\n",
+    "    # Define the filename based on the Station_ID\n",
+    "    filename = f'Station_{station_id}.csv'\n",
+    "    \n",
+    "    # Save the group as a CSV file\n",
+    "    group.to_csv(filename, index=False)\n",
+    "    \n",
+    "    # Increment the counter\n",
+    "    csv_count += 1\n",
+    "\n",
+    "# Print the total number of CSV files created\n",
+    "print(f\"Total CSV files created: {csv_count}\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Verify Station_ID CSVs' Shape"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 18,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Total CSV files created: 90\n",
+      "All CSV files have the same shape.\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Initialize a counter for the number of CSV files created\n",
+    "csv_count = 0\n",
+    "mismatch_count = 0\n",
+    "\n",
+    "# Get the directory where the notebook is located\n",
+    "notebook_dir = os.getcwd()  # Gets the current working directory of the notebook\n",
+    "\n",
+    "# Define the subdirectory for saving CSV files\n",
+    "subdirectory = os.path.join(notebook_dir, \"NASA_DB\")\n",
+    "\n",
+    "# Create the subdirectory if it doesn't exist\n",
+    "os.makedirs(subdirectory, exist_ok=True)\n",
+    "\n",
+    "# Assuming `df` is your DataFrame with a column named 'Station_ID'\n",
+    "for station_id, group in df.groupby('Station_ID'):\n",
+    "    # Define the filename based on the Station_ID and save it in the subdirectory\n",
+    "    filename = os.path.join(subdirectory, f'Station_{station_id}.csv')\n",
+    "    \n",
+    "    # Save the group as a CSV file\n",
+    "    group.to_csv(filename, index=False)\n",
+    "    \n",
+    "    # Increment the counter\n",
+    "    csv_count += 1\n",
+    "    \n",
+    "    # Read back the CSV file to verify its shape\n",
+    "    saved_df = pd.read_csv(filename)\n",
+    "    \n",
+    "    # Check if the shape matches\n",
+    "    if saved_df.shape != group.shape:\n",
+    "        print(f\"Shape mismatch for {filename}: Original {group.shape}, Saved {saved_df.shape}\")\n",
+    "        mismatch_count += 1\n",
+    "\n",
+    "# Print the total number of CSV files created and any mismatches found\n",
+    "print(f\"Total CSV files created: {csv_count}\")\n",
+    "if mismatch_count == 0:\n",
+    "    print(\"All CSV files have the same shape.\")\n",
+    "else:\n",
+    "    print(f\"{mismatch_count} CSV files have shape mismatches.\")\n"
    ]
   },
   {
@@ -637,9 +1013,35 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "An error occurred while requesting URL('http://localhost:9000/api/status').\n",
+      "\tConnectError('[Errno 111] Connection refused')\n",
+      "An error occurred while requesting URL('http://localhost:9060/api/status').\n",
+      "\tConnectError('[Errno 111] Connection refused')\n",
+      "Error: no proxy address identified.\n",
+      "Check if Desktop is running.\n",
+      "An error occurred while requesting URL('http://localhost:9000/api/handshake').\n",
+      "\tConnectError('[Errno 111] Connection refused')\n",
+      "Error on handshake url http://localhost:9000/api/handshake : ConnectError('[Errno 111] Connection refused')\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "<refinitiv.data.session.Definition object at 0x7f279f616910 {name='workspace'}>"
+      ]
+     },
+     "execution_count": 2,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "import pandas as pd\n",
     "import refinitiv.data as rd\n",
@@ -783,7 +1185,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -821,7 +1223,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -925,7 +1327,7 @@
        "4  2023-06-07  3109.0  3028.0  3038.0   3103  43640.0  2023-06-07"
       ]
      },
-     "execution_count": 31,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -938,7 +1340,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
