--- a/DataCheckpoint_Group142-FA24.ipynb
+++ b/DataCheckpoint_Group142-FA24.ipynb
@@ -117,6 +117,40 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "### Feature Overview\n",
+    "\n",
+    "#### NASA Agroclimatological Data\n",
+    "| **Variable**                  | **Description**                                                                 | **Type**        | **Time Frequency** |\n",
+    "|-------------------------------|---------------------------------------------------------------------------------|-----------------|--------------------|\n",
+    "| **DATE**                      | Daily records from March 1st, 2024, to October 15th, 2024                        | DateTime            | Daily              |\n",
+    "| **Station_ID**                | The Geographical location at which the data is from based on Lon & Lat           | Categorical      | Daily              |\n",
+    "| **LAT**                       | The latitude at which the data is from                                           | Categorical      | Daily              |\n",
+    "| **LON**                       | The longitude at which the data is from                                          | Categorical      | Daily              \n",
+    "| **Soil_Moisture**             | Daily soil moisture levels in cocoa-growing regions                              | Numeric (%)      | Daily              |\n",
+    "| **Temp_Avg**                  | Daily average temperatures in key regions                                        | Numeric (°C)     | Daily              |\n",
+    "| **Temp_Max**                  | Daily maximum temperature in key regions                                         | Numeric (°C)     | Daily              |\n",
+    "| **Temp_Min**                  | Daily minimum temperature in key regions                                         | Numeric (°C)     | Daily              |\n",
+    "| **Earth_Skin_Temp**           | The temperature of the Earth's surface 10m below ground level                    | Numeric (°C)     | Daily              |\n",
+    "| **Rel_Humidity**              | Daily humidity levels in cocoa-growing regions 2m above ground level             | Numeric (%)      | Daily              |\n",
+    "| **Root_Soil_Wetness**         | Daily soil moisture levels in cocoa-growing regions 10m below ground level       | Numeric (%)      | Daily              |\n",
+    "| **Precip_Corrected**          | Daily precipitation levels in key cocoa-producing regions (Ivory Coast)          | Numeric (mm)     | Daily              |\n",
+    "\n",
+    "\n",
+    "#### Historic Daily Cocoa Futures Data\n",
+    "| **Variable**                  | **Description**                                                                 | **Type**        | **Time Frequency** |\n",
+    "|-------------------------------|---------------------------------------------------------------------------------|-----------------|--------------------|\n",
+    "| **DATE**                      | Daily records from March 1st, 2024, to October 15th, 2024                        | DateTime          | Daily            |\n",
+    "| **HIGH**                      | Daily max price of cocoa futures contracts                                       | Numeric (USD)    | Daily              |\n",
+    "| **LOW**                       | Daily min price of cocoa futures contracts                                       | Numeric (USD)    | Daily              |\n",
+    "| **OPEN**                      | Daily opening price of cocoa futures contracts                                   | Numeric (USD)    | Daily              |\n",
+    "| **CLOSE**                     | Daily closing price of cocoa futures contracts                                   | Numeric (USD)    | Daily              |\n",
+    "| **VOLUME**                    | Daily volume of cocoa futures traded                                             | Numeric          | Daily              |"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "### NASA Power Dav Tool Data\n",
     "This dataset includes daily agroclimatological measurements from March 1, 2023, to June 30, 2024, across various locations specified by latitude and longitude. Key variables include:\n",
     "\n",
@@ -626,7 +660,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Create a new df where we assign stations to each LAT, LON"
+    "### Assigning Station IDs based on LAT & LON"
    ]
   },
   {
@@ -1001,7 +1035,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Historic daily close prices for cocoa futures"
+    "## Historic Daily Close Prices for Cocoa Futures"
    ]
   },
   {
@@ -1013,17 +1047,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 88,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
     "import pandas as pd\n",
+    "# note 'pip install refinitiv-data' to sucessfully run this cell\n",
     "import refinitiv.data as rd\n",
     "import plotly.graph_objects as go\n",
     "from plotly.subplots import make_subplots\n",
     "import plotly.express as px\n",
     "import warnings\n",
     "import datetime as dt\n",
+    "# note 'pip install eikon' to sucessfully run this cell\n",
     "import eikon as ek\n",
     "import os\n",
     "warnings.filterwarnings(\"ignore\")\n",
@@ -1037,25 +1073,24 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Main code and functions"
+    "### Data Collection with Refinitive API \n",
+    "NOTE! This cell block below will not execute as we are not comfortable publishing the API key. We have included the cell to only demonstrate how we collected our data using Refinitiv's API."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
     "# Function to generate the ric list\n",
-    "\n",
     "def gen_contracts(baseString):\n",
     "    contracts = []\n",
     "    for i in range(1, 37):\n",
     "        contracts.append(baseString+'c'+str(i))\n",
     "    return contracts\n",
+    "    \n",
     "# Function to retrieve the data\n",
-    "\n",
-    "\n",
     "def get_contracts_data(baseCon, start_date, end_date):\n",
     "    contracts = gen_contracts(baseCon)\n",
     "    print(contracts)\n",
@@ -1064,8 +1099,6 @@
     "    return df\n",
     "\n",
     "# Function for anlyzing spread\n",
-    "\n",
-    "\n",
     "def spread_analysis(df, c1, c2):\n",
     "    df = df.reset_index().ffill()\n",
     "    df['spread'] = df[c1] - df[c2]\n",
@@ -1092,72 +1125,14 @@
     "                  yref='y'\n",
     "\n",
     "                  )\n",
-    "    fig.show()"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "### Enter RIC root to get data. \n",
-    "Enter the Ric root for each metal to get data, for example Cc1 for December-2024 and Cc2 for March-2025"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 31,
-   "metadata": {},
-   "outputs": [
-    {
-     "ename": "ModuleNotFoundError",
-     "evalue": "No module named 'refinitiv_widgets'",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mModuleNotFoundError\u001b[0m                       Traceback (most recent call last)",
-      "Cell \u001b[0;32mIn[31], line 1\u001b[0m\n\u001b[0;32m----> 1\u001b[0m \u001b[38;5;28;01mfrom\u001b[39;00m \u001b[38;5;21;01mrefinitiv_widgets\u001b[39;00m \u001b[38;5;28;01mimport\u001b[39;00m TextField\n\u001b[1;32m      2\u001b[0m \u001b[38;5;28;01mfrom\u001b[39;00m \u001b[38;5;21;01mrefinitiv_widgets\u001b[39;00m \u001b[38;5;28;01mimport\u001b[39;00m DatetimePicker\n\u001b[1;32m      3\u001b[0m baseCon \u001b[38;5;241m=\u001b[39m TextField(placeholder\u001b[38;5;241m=\u001b[39m\u001b[38;5;124m'\u001b[39m\u001b[38;5;124mEnter Ric Root\u001b[39m\u001b[38;5;124m'\u001b[39m)\n",
-      "\u001b[0;31mModuleNotFoundError\u001b[0m: No module named 'refinitiv_widgets'"
-     ]
-    }
-   ],
-   "source": [
-    "from refinitiv_widgets import TextField\n",
-    "from refinitiv_widgets import DatetimePicker\n",
-    "baseCon = TextField(placeholder='Enter Ric Root')\n",
+    "    fig.show()\n",
     "\n",
-    "baseCon"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "from refinitiv_widgets import TextField\n",
     "dp = DatetimePicker(\n",
     "    range_mode=True,\n",
     "    duplex_mode='split',\n",
     "    weekdays_only=True,\n",
     "    value=[\"2022-01-01\", \"2022-09-09\"])\n",
-    "dp"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "### Extract Data\n",
-    "File will be saved in user home directory. (same level with Examples folder)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "from pathlib import Path\n",
+    "\n",
     "rd.open_session()\n",
     "df = get_contracts_data(baseCon.value, dp.value[0], dp.value[1])\n",
     "fileName = baseCon.value + '.csv'\n",
@@ -1167,8 +1142,16 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Exporting Refinitiv Data \n",
+    "Since the API key is not published and the above cell block will not run for submission purposes we have made a copy of the Refinitiv Data and saved it in the Contract_DB directory and called it df_cc1.csv."
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 83,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
@@ -1266,7 +1249,7 @@
        "4  2020-01-08  2535.0  2497.0  2530.0   2501  13837.0"
       ]
      },
-     "execution_count": 83,
+     "execution_count": 15,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1279,7 +1262,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 86,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [
     {
@@ -1433,29 +1416,28 @@
        "[1202 rows x 6 columns]"
       ]
      },
-     "execution_count": 86,
+     "execution_count": 18,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "'''\n",
-    "df_cc1['Date'] = df_cc1['Date'].astype(str)\n",
-    "\n",
-    "# Convert 'Date' column to datetime, handling errors\n",
-    "df_cc1['Date'] = pd.to_datetime(df_cc1['Date'], errors='coerce')\n",
-    "\n",
-    "# Verify the conversion\n",
-    "print(df_cc1['Date'].dtypes)\n",
-    "'''\n",
     "# Convert the Date col into datetime format \n",
     "df_cc1['Date'] = pd.to_datetime(df_cc1['Date'])\n",
-    "df_cc1\n"
+    "df_cc1"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Slicing & Exporting df by Contract Seperation\n",
+    "We want to slice the data based on the different Cocoa contracts."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 98,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [
     {
@@ -1501,224 +1483,6 @@
     "    filename = os.path.join(output_dir, f\"Separation_{idx}.csv\")\n",
     "    filtered_df.to_csv(filename, index=False)\n",
     "    print(f\"Saved: {filename}\")"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 102,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>Date</th>\n",
-       "      <th>HIGH</th>\n",
-       "      <th>LOW</th>\n",
-       "      <th>OPEN</th>\n",
-       "      <th>CLOSE</th>\n",
-       "      <th>VOLUME</th>\n",
-       "      <th>Index</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>0</th>\n",
-       "      <td>2023-06-01</td>\n",
-       "      <td>3047.0</td>\n",
-       "      <td>3002.0</td>\n",
-       "      <td>3017.0</td>\n",
-       "      <td>3008</td>\n",
-       "      <td>34422.0</td>\n",
-       "      <td>NaN</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1</th>\n",
-       "      <td>2023-06-02</td>\n",
-       "      <td>3034.0</td>\n",
-       "      <td>2991.0</td>\n",
-       "      <td>3003.0</td>\n",
-       "      <td>3026</td>\n",
-       "      <td>25530.0</td>\n",
-       "      <td>NaN</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2</th>\n",
-       "      <td>2023-06-05</td>\n",
-       "      <td>3065.0</td>\n",
-       "      <td>3002.0</td>\n",
-       "      <td>3020.0</td>\n",
-       "      <td>3056</td>\n",
-       "      <td>28784.0</td>\n",
-       "      <td>NaN</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>3</th>\n",
-       "      <td>2023-06-06</td>\n",
-       "      <td>3096.0</td>\n",
-       "      <td>3040.0</td>\n",
-       "      <td>3063.0</td>\n",
-       "      <td>3045</td>\n",
-       "      <td>52105.0</td>\n",
-       "      <td>NaN</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>4</th>\n",
-       "      <td>2023-06-07</td>\n",
-       "      <td>3109.0</td>\n",
-       "      <td>3028.0</td>\n",
-       "      <td>3038.0</td>\n",
-       "      <td>3103</td>\n",
-       "      <td>43640.0</td>\n",
-       "      <td>NaN</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "</div>"
-      ],
-      "text/plain": [
-       "         Date    HIGH     LOW    OPEN  CLOSE   VOLUME  Index\n",
-       "0  2023-06-01  3047.0  3002.0  3017.0   3008  34422.0    NaN\n",
-       "1  2023-06-02  3034.0  2991.0  3003.0   3026  25530.0    NaN\n",
-       "2  2023-06-05  3065.0  3002.0  3020.0   3056  28784.0    NaN\n",
-       "3  2023-06-06  3096.0  3040.0  3063.0   3045  52105.0    NaN\n",
-       "4  2023-06-07  3109.0  3028.0  3038.0   3103  43640.0    NaN"
-      ]
-     },
-     "execution_count": 102,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 68,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>index</th>\n",
-       "      <th>Date</th>\n",
-       "      <th>HIGH</th>\n",
-       "      <th>LOW</th>\n",
-       "      <th>OPEN</th>\n",
-       "      <th>CLOSE</th>\n",
-       "      <th>VOLUME</th>\n",
-       "      <th>DATE</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "</div>"
-      ],
-      "text/plain": [
-       "Empty DataFrame\n",
-       "Columns: [index, Date, HIGH, LOW, OPEN, CLOSE, VOLUME, DATE]\n",
-       "Index: []"
-      ]
-     },
-     "execution_count": 68,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "new_separated_data['Separation 1'][\"DATE\"] = new_separated_data['Separation 1'].index\n",
-    "new_separated_data[\"Separation 1\"].reset_index()\n",
-    "new_separated_data['Separation 2'][\"DATE\"] = new_separated_data['Separation 2'].index\n",
-    "new_separated_data[\"Separation 2\"].reset_index()\n",
-    "new_separated_data['Separation 3'][\"DATE\"] = new_separated_data['Separation 3'].index\n",
-    "new_separated_data[\"Separation 3\"].reset_index()\n",
-    "new_separated_data['Separation 4'][\"DATE\"] = new_separated_data['Separation 4'].index\n",
-    "new_separated_data[\"Separation 4\"].reset_index()\n",
-    "new_separated_data['Separation 5'][\"DATE\"] = new_separated_data['Separation 5'].index\n",
-    "new_separated_data[\"Separation 5\"].reset_index()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 55,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "new_separated_data['Separation 1'].to_csv(\"Separation_1.csv\")\n",
-    "new_separated_data['Separation 2'].to_csv(\"Separation_2.csv\")\n",
-    "new_separated_data['Separation 3'].to_csv(\"Separation_3.csv\")\n",
-    "new_separated_data['Separation 4'].to_csv(\"Separation_4.csv\")\n",
-    "new_separated_data['Separation 5'].to_csv(\"Separation_5.csv\")"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 56,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "{'Separation 1': Empty DataFrame\n",
-       " Columns: [Date, HIGH, LOW, OPEN, CLOSE, VOLUME, DATE]\n",
-       " Index: [],\n",
-       " 'Separation 2': Empty DataFrame\n",
-       " Columns: [Date, HIGH, LOW, OPEN, CLOSE, VOLUME, DATE]\n",
-       " Index: [],\n",
-       " 'Separation 3': Empty DataFrame\n",
-       " Columns: [Date, HIGH, LOW, OPEN, CLOSE, VOLUME, DATE]\n",
-       " Index: [],\n",
-       " 'Separation 4': Empty DataFrame\n",
-       " Columns: [Date, HIGH, LOW, OPEN, CLOSE, VOLUME, DATE]\n",
-       " Index: [],\n",
-       " 'Separation 5': Empty DataFrame\n",
-       " Columns: [Date, HIGH, LOW, OPEN, CLOSE, VOLUME, DATE]\n",
-       " Index: []}"
-      ]
-     },
-     "execution_count": 56,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "new_separated_data"
    ]
   },
   {
@@ -1789,13 +1553,6 @@
     "| 11/13 | 6:30PM - 8:30PM | - Fix time breakdown for CC1 | - Update goals for next meeting <br> - Finish DataCheckpoint  |\n",
     "| 11/8 | 4PM - 5:30PM | - Get refinitive access <br> - Find price commodity data for cocoa <br> - Test prediction model to see if viable for project  | - Discuss   |"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
